2006-04-05  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: New line-join terminal option {rounded|butt},
	with support for smooth joining of closed polygons via the recently
	added newpath()/closepath() mechanism.

2006-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Fix inadvertant breakage due to an
	accidentally deleted call to arrow_parse().

2006-04-04  Harald Harders  <h.harders@tu-bs.de>

	* src/term.c (do_arrow) src/term_api.h docs/gnuplot.doc
	* src/graphics.c (get_arrow plot_boxes plot_vectors)
	* src/misc.c (arrow_use_properties) src/show.c (show_arrow):
	Add an option "backhead" to arrow style that reverses the sense
	of the arrow. Modify flags to indicate the forward arrowhead and
	the backward arrowhead separately, so "heads" sets both flags.
	Patchset #1318546

2006-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/term.c (newpath closepath) term/README:
	Define a new terminal entry point term->path(foo), and wrapper routines
	newpath() == term->path(0);  closepath == term->path(1).
	These are needed to ensure smooth line joins at the ends of a closed
	path in PostScript-like	terminals.

	* src/graph3d.c (do_3dplot draw_3d_graphbox) 
	* src/graphics.c (do_plot plot_boxes plot_cbars do_key_sample)
	* src/graphics.c (plot_border) src/color.c (draw_color_smooth_box):
	Enclose the vector commands that draw rectangles with a
	newpath()...closepath() pair. This guarantees a smooth join for the
	plot boundary, the key box, colorbox, boxes, and candlesticks.

2006-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (gpXLoadQueryFont): When trying to load a multibyte
	fontset, treat "missing charsets" as a non-fatal warning.  This seems
	necessary in order to handle en_US.UTF-8 and similar locales, which
	claim to require many exotic but trivial charsets.  Normally these are
	not needed, so it should not be a fatal error if they are missing.
	Bug #1458525
