@@ -386,6 +386,7 @@ extern TBOOLEAN is_cb_plot;
 
 /* moved here from util3d: */
 void draw_clip_line __PROTO((int, int, int, int));
+void draw_clip_arrow __PROTO((int, int, int, int, int));
 int clip_line __PROTO((int *, int *, int *, int *));
 int clip_point __PROTO((unsigned int, unsigned int));
 void clip_put_text __PROTO((unsigned int, unsigned int, char *));
